# github-actions-test

./: CMakeLists.txt  CMakePresets.json  main.c  vcpkg.json
.github/workflows/: cmake-vcpkg-windows.yml
